Test(fxui): Updating the test methods to handle REST-API These test are not done, but need to be pushed for other teammates.